# piet

./: .azure-pipelines.yml  .gitignore  .gitmodules  .travis.yml  .typos.toml  AUTHORS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.github/: copyright.sh
.github/workflows/: ci.yml  snapshot.yml
ci/: install-rust.yml  test.yml
cpu-sparse/: Cargo.toml
cpu-sparse/examples/: simple.rs  svg.rs
cpu-sparse/src/: fine.rs  flatten.rs  lib.rs  pixmap.rs  render.rs  simd.rs  strip.rs  tiling.rs  wide_tile.rs
cpu-sparse/src/simd/: neon.rs  neon_fp16.rs  neon_u8.rs
piet/: Cargo.toml  LICENSE-MIT
piet-cairo/: Cargo.toml  README.md
piet-cairo/benches/: make_image.rs
piet-cairo/examples/: basic-cairo.rs  test-picture.rs
piet-cairo/src/: blurred_rect.rs  grapheme.rs  lib.rs  text.rs
piet-cairo/src/text/: grapheme.rs  lines.rs
piet-common/: Cargo.toml  README.md
piet-common/examples/: mondrian.rs  png.rs  sample.rs
piet-common/src/: cairo_back.rs  cg_back.rs  direct2d_back.rs  lib.rs  skia_back.rs  web_back.rs
piet-common/tests/: context.rs  image.rs  text.rs
piet-coregraphics/: Cargo.toml
piet-coregraphics/examples/: basic-cg.rs  test-picture.rs
piet-coregraphics/src/: blurred_rect.rs  ct_helpers.rs  gradient.rs  lib.rs  text.rs
piet-direct2d/: Cargo.toml  GENERATED_BY
piet-direct2d/examples/: basic.rs  test-picture.rs  winit.rs
piet-direct2d/src/: conv.rs  d2d.rs  d3d.rs  dwrite.rs  error.rs  lib.rs  text.rs
piet-direct2d/src/text/: glyph_iter.rs  lines.rs
piet-next/: Cargo.toml
piet-next/src/: any.rs  generic_record.rs  lib.rs
piet-pathfinder/: Cargo.toml
piet-pathfinder/examples/: basic-pathfinder.rs
piet-pathfinder/src/: lib.rs  text.rs
piet-skia/: Cargo.toml
piet-skia/examples/: test-picture.rs
piet-skia/src/: lib.rs  piet_back.rs  simple_text.rs  text.rs
piet-svg/: Cargo.toml
piet-svg/examples/: basic-svg.rs
piet-svg/src/: evcxr.rs  lib.rs  text.rs
piet-test/: Cargo.toml  README.md
piet-test/src/: lib.rs  picture_0.rs  picture_1.rs  picture_2.rs  picture_3.rs  picture_4.rs  picture_5.rs
piet-test/src/samples/: mod.rs  picture_0.rs  picture_1.rs  picture_10.rs  picture_11.rs  picture_12.rs  picture_13.rs  picture_14.rs  picture_15.rs  picture_2.rs  picture_3.rs  picture_4.rs  picture_5.rs  picture_6.rs  picture_7.rs  picture_8.rs  picture_9.rs
piet-web/: Cargo.toml  README.md
piet-web/examples/: basic-web.rs
piet-web/examples/basic/: Cargo.toml  build.sh
piet-web/examples/basic-web-static/: index.html
piet-web/examples/basic/basic-web-static/: index.html  index.js
piet-web/examples/basic/src/: lib.rs
piet-web/src/: grapheme.rs  lib.rs  text.rs
piet-web/src/text/: grapheme.rs  lines.rs
piet/src/: cairo_impl.rs  color.rs  conv.rs  direct2d_impl.rs  error.rs  font.rs  gradient.rs  image.rs  lib.rs  null_renderer.rs  render_context.rs  shapes.rs  text.rs  traits.rs  util.rs
piet/src/samples/: mod.rs  picture_0.rs  picture_1.rs  picture_10.rs  picture_11.rs  picture_12.rs  picture_13.rs  picture_14.rs  picture_15.rs  picture_16.rs  picture_2.rs  picture_3.rs  picture_4.rs  picture_5.rs  picture_6.rs  picture_7.rs  picture_8.rs  picture_9.rs
