[workspace]

members = [
    "piet",
    "piet-cairo",
    "piet-common",
    "piet-direct2d",
    "piet-test",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg",
    "piet-pathfinder"
]

default-members = [
    "piet",
    "piet-common",
    "piet-test",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]
