[workspace]
resolver = "2"

members = [
    "piet",
    "piet-cairo",
    "piet-common",
    "piet-coregraphics",
    "piet-direct2d",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
, "piet-next"]

default-members = [
    "piet",
    "piet-common",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]
