[workspace]
resolver = "2"

members = [
    "piet",
    "piet-cairo",
    "piet-common",
    "piet-coregraphics",
    "piet-direct2d",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]

default-members = [
    "piet",
    "piet-common",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]

[workspace.package]
# Piet version, also used by other packages which want to mimic Piet's version.
# Right now those packages include:
# piet-common, piet-cairo, piet-coregraphics, piet-direct2d, piet-svg, piet-web.
#
# NOTE: When bumping this, remember to also bump the aforementioned other packages'
#       version in the dependencies section at the bottom of this file.
version = "0.7.0"

edition = "2021"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml and with the relevant README.md files.
rust-version = "1.83"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"

[workspace.dependencies]
piet = { version = "=0.7.0", path = "piet" }
piet-common = { version = "=0.7.0", path = "piet-common" }
piet-cairo = { version = "=0.7.0", path = "piet-cairo" }
piet-coregraphics = { version = "=0.7.0", path = "piet-coregraphics" }
piet-direct2d = { version = "=0.7.0", path = "piet-direct2d" }
piet-web = { version = "=0.7.0", path = "piet-web" }
