[package]
name = "piet-cairo"
version = "0.7.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2021"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "=0.7.0", path = "../piet" }

cairo-rs = { version = "0.18.5", default-features = false } # We don't need glib
pango = { version = "0.18.3", features = ["v1_44"] }
pangocairo = "0.18.0"
unicode-segmentation = "1.12.0"
xi-unicode = "0.3.0"

[dev-dependencies]
piet = { version = "=0.7.0", path = "../piet", features = ["samples"] }
piet-common = { version = "=0.7.0", path = "../piet-common", features = ["png"] }
criterion = "0.5.1"

[[bench]]
name = "make_image"
harness = false
