[package]
name = "piet-cairo"
version.workspace = true
description = "Cairo backend for Piet 2D graphics abstraction."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
piet = { workspace = true }

cairo-rs = { version = "0.21.1", default-features = false } # We don't need glib
pango = { version = "0.21.1", features = ["v1_44"] }
pangocairo = "0.21.1"
unicode-segmentation = "1.12.0"
xi-unicode = "0.3.0"

[dev-dependencies]
piet = { workspace = true, features = ["samples"] }
piet-common = { path = "../piet-common", features = ["png"] }
criterion = "0.5.1"

[[bench]]
name = "make_image"
harness = false
