[package]
name = "piet-common"
version = "0.6.1"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Selection of a single preferred back-end for piet"
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
readme = "README.md"
edition = "2018"
keywords = ["graphics", "2d"]

[features]
web = ["piet-web"]

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and that's all we use `Image` for.
image = ["piet/image"]
image_png = ["piet/image_png"]
jpeg = ["piet/jpeg"]
jpeg_rayon = ["piet/jpeg_rayon"]
gif = ["piet/gif"]
bmp = ["piet/bmp"]
ico = ["piet/ico"]
tiff = ["piet/tiff"]
webp = ["piet/webp"]
pnm = ["piet/pnm"]
dds = ["piet/dds"]
tga = ["piet/tga"]
farbfeld = ["piet/farbfeld"]
dxt = ["piet/dxt"]
hdr = ["piet/hdr"]

serde = ["piet/serde"]

[dependencies]
piet = { version = "=0.6.1", path = "../piet" }
piet-web = { version = "=0.6.1", path = "../piet-web", optional = true }
cfg-if = "1.0.0"
png = { version = "0.17.7", optional = true }

[target.'cfg(any(target_os="linux", target_os="openbsd", target_os="freebsd", target_os="netbsd"))'.dependencies]
piet-cairo = { version = "=0.6.1", path = "../piet-cairo" }
cairo-rs = { version = "0.16.3", default_features = false }
cairo-sys-rs = { version = "0.16.3" }

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
piet-coregraphics = { version = "=0.6.1", path = "../piet-coregraphics" }
core-graphics = { version = "0.22.3" }

[target.'cfg(target_os="windows")'.dependencies]
piet-direct2d = { version = "=0.6.1", path = "../piet-direct2d" }

[target.'cfg(target_arch="wasm32")'.dependencies]
piet-web = { version = "=0.6.1", path = "../piet-web" }
wasm-bindgen = "0.2.83"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
wasm-bindgen-test = "0.3.33"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
    "Window",
    "CanvasGradient",
    "CanvasRenderingContext2d",
    "CanvasWindingRule",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageBitmap",
    "ImageData",
    "TextMetrics",
]

[dev-dependencies]
static_assertions = "1.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
