[package]
name = "piet-common"
version.workspace = true
description = "Selection of a single preferred backend for Piet."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown"
    ]

[features]
# passing on all the image features. AVIF is not supported because it does not
# support decoding, and that's all we use `Image` for.
image = ["piet/image"]
image_png = ["piet/image_png"]
jpeg = ["piet/jpeg"]
gif = ["piet/gif"]
bmp = ["piet/bmp"]
ico = ["piet/ico"]
tiff = ["piet/tiff"]
webp = ["piet/webp"]
pnm = ["piet/pnm"]
dds = ["piet/dds"]
tga = ["piet/tga"]
hdr = ["piet/hdr"]

serde = ["piet/serde"]

[dependencies]
piet = { workspace = true }
cfg-if = "1.0.0"
png = { version = "0.17.14", optional = true }

[target.'cfg(any(target_os="linux", target_os="openbsd", target_os="freebsd", target_os="netbsd"))'.dependencies]
piet-cairo = { workspace = true }
cairo-rs = { version = "0.20.1", default-features = false }
cairo-sys-rs = { version = "0.20.0" }

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
piet-coregraphics = { workspace = true }
core-graphics = { version = "0.24.0" }

[target.'cfg(target_os="windows")'.dependencies]
piet-direct2d = { workspace = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
piet-web = { workspace = true }
wasm-bindgen = "0.2.97"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-test = "0.3.45"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.72"
features = [
    "console",
    "Window",
    "CanvasGradient",
    "CanvasRenderingContext2d",
    "CanvasWindingRule",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageBitmap",
    "ImageData",
    "TextMetrics",
]

[dev-dependencies]
static_assertions = "1.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
