[package]
name = "piet-coregraphics"
version = "0.7.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>, Raph Levien <raph.levien@gmail.com>, Colin Rofls <colin.rofls@gmail.com>"]
description = "CoreGraphics backend for piet 2D graphics abstraction."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2021"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "=0.7.0", path = "../piet" }

foreign-types = "0.5.0"
core-graphics = "0.24.0"
core-text = "21.0.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
associative-cache = "2.0.0"

[dev-dependencies]
piet = { version = "=0.7.0", path = "../piet", features = ["samples"] }
piet-common = { version = "=0.7.0", path = "../piet-common", features = ["png"] }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
