[package]
name = "piet-coregraphics"
version.workspace = true
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>, Raph Levien <raph.levien@gmail.com>, Colin Rofls <colin.rofls@gmail.com>"]
description = "CoreGraphics backend for Piet 2D graphics abstraction."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-apple-darwin"
targets = []

[dependencies]
piet = { workspace = true }

foreign-types = "0.5.0"
core-graphics = "0.24.0"
core-text = "21.0.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
associative-cache = "2.0.0"

[dev-dependencies]
piet = { workspace = true, features = ["samples"] }
piet-common = { workspace = true, features = ["png"] }
