[package]
name = "piet-direct2d"
version = "0.6.2"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Direct2D backend for piet 2D graphics abstraction."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "=0.6.2", path = "../piet" }
utf16_lit = "2.0.2"
associative-cache = "1.0.1"

wio = "0.2.2"
winapi = { version = "0.3.9", features = ["d2d1", "d2d1_1", "d2d1effects", "d2dbasetypes", "dcommon", "d3d11", "dxgi", "winnls"] }
dwrote = { version = "0.11.0", default_features = false }

[dev-dependencies]
piet = { version = "=0.6.2", path = "../piet", features = ["samples"] }
piet-common = { version = "=0.6.2", path = "../piet-common", features = ["png"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
