[package]
name = "piet-direct2d"
version.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Direct2D backend for Piet 2D graphics abstraction."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
piet = { workspace = true }
utf16_lit = "2.0.2"
associative-cache = "2.0.0"

wio = "0.2.2"
winapi = { version = "0.3.9", features = ["d2d1", "d2d1_1", "d2d1effects", "d2dbasetypes", "dcommon", "d3d11", "dxgi", "winnls"] }
dwrote = { version = "0.11.2", default-features = false }

[dev-dependencies]
piet = { workspace = true, features = ["samples"] }
piet-common = { workspace = true, features = ["png"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
