[package]
name = "piet-direct2d"
version.workspace = true
description = "Direct2D backend for Piet 2D graphics abstraction."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
piet = { workspace = true }
utf16_lit = "2.0.2"
associative-cache = "2.0.0"

wio = "0.2.2"
winapi = { version = "0.3.9", features = ["d2d1", "d2d1_1", "d2d1effects", "d2dbasetypes", "dcommon", "d3d11", "dxgi", "winnls"] }
dwrote = { version = "0.11.4", default-features = false }

[dev-dependencies]
piet = { workspace = true, features = ["samples"] }
piet-common = { path = "../piet-common", features = ["png"] }
