[package]
name = "piet-pathfinder"
version = "0.0.12"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
description = "Pathfinder backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "0.0.12", path = "../piet" }
unicode-segmentation = "1.3.0"
xi-unicode = "0.2.0"
gl = "0.14.0"
pathfinder_renderer = "0.5.0"
pathfinder_gl = "0.5.0"
pathfinder_canvas = { version = "0.5.0", features = ["pf-text"] }
pathfinder_geometry = "0.5.1"
pathfinder_color = "0.5.0"
pathfinder_resources = "0.5.0"
pathfinder_content = "0.5.0"
image = { version = "0.23.4", default-features = false }
skribo = "0.1.0"

[dev-dependencies]
piet-test = { version = "0.0.12", path = "../piet-test" }
glutin = "0.24.0"

