[package]
name = "piet-skia"
version = "0.1.0"
authors = ["Vlad Zhukov <vladzhukovtirko@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = {git = "https://github.com/aclysma/skulpin.git", features = ["skulpin_winit", "skulpin_sdl2", "skia_complete", "winit-23"], default-features = false, rev = "8a913ed52fcbe3cdd2cb97ed245f7e5798ee05c4"}
piet = { version = "0.2.0", path = "../piet", features = ["samples"] }
