[package]
name = "piet-skia"
version = "0.1.0"
authors = ["Vlad Zhukov <vladzhukovtirko@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { git = "https://github.com/Vurich/rust-skia.git", features = ["gl", "lottie", "textlayout"] }
piet = { version = "0.3.1", path = "../piet", features = ["samples"] }
xi-unicode = "0.2.0"
