[package]
name = "piet-svg"
version = "0.6.2"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "SVG backend for piet 2D graphics abstraction."
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[features]
default = []
evcxr = ["evcxr_runtime"]

[dependencies]
base64 = "0.13.1"
evcxr_runtime = { version = "1.1.0", optional = true }
font-kit = "0.10.1"
image = { version = "0.24.5", default-features = false, features = ["png"] }
piet = { version = "=0.6.2", path = "../piet" }
rustybuzz = "0.4.0"
svg = "0.10.0"

[dev-dependencies]
piet = { version = "=0.6.2", path = "../piet", features = ["samples"] }
