[package]
name = "piet-svg"
version.workspace = true
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "SVG backend for Piet 2D graphics abstraction."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[features]
default = []
evcxr = ["evcxr_runtime"]

[dependencies]
base64 = "0.13.1"
evcxr_runtime = { version = "1.1.0", optional = true }
font-kit = "0.14.2"
image = { version = "0.25.4", default-features = false, features = ["png"] }
piet = { workspace = true }
rustybuzz = "0.20.0"
svg = "0.18.0"

[dev-dependencies]
piet = { workspace = true, features = ["samples"] }
