[package]
name = "piet-test"
version = "0.0.9"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Utilities for testing the piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
edition = "2018"
keywords = ["graphics", "2d"]

[dependencies]
piet = { version = "0.0.9", path = "../piet" }
