[package]
name = "piet-web"
version = "0.5.0"
edition = "2018"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Web canvas backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piet = { version = "=0.5.0", path = "../piet" }

unicode-segmentation = "1.6.0"
xi-unicode = "0.3.0"
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"

[dependencies.web-sys]
version = "0.3.47"
features = ["Window", "CanvasGradient", "CanvasRenderingContext2d", "CanvasWindingRule",
            "Document", "DomMatrix", "Element", "HtmlCanvasElement", "ImageBitmap",
            "ImageData", "TextMetrics"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dev-dependencies.web-sys]
version = "0.3.47"
features = ["console", "Window", "CanvasGradient", "CanvasRenderingContext2d", "CanvasWindingRule",
            "Document", "DomMatrix", "Element", "HtmlCanvasElement", "ImageBitmap", "ImageData",
            "TextMetrics"]
