[package]
name = "piet-web"
version = "0.7.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Web canvas backend for piet 2D graphics abstraction."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2021"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piet = { version = "=0.7.0", path = "../piet" }

unicode-segmentation = "1.12.0"
xi-unicode = "0.3.0"
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"

[dependencies.web-sys]
version = "0.3.72"
features = ["console", "Window", "CanvasGradient", "CanvasRenderingContext2d", "CanvasWindingRule",
            "Document", "DomMatrix", "Element", "HtmlCanvasElement", "ImageBitmap",
            "ImageData", "TextMetrics"]

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
