[package]
name = "piet-web"
version.workspace = true
description = "Web canvas backend for Piet 2D graphics abstraction."
categories = ["rendering::graphics-api", "wasm"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "wasm32-unknown-unknown"
targets = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piet = { workspace = true }

unicode-segmentation = "1.12.0"
xi-unicode = "0.3.0"
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"

[dependencies.web-sys]
version = "0.3.72"
features = ["console", "Window", "CanvasGradient", "CanvasRenderingContext2d", "CanvasWindingRule",
            "Document", "DomMatrix", "Element", "HtmlCanvasElement", "ImageBitmap",
            "ImageData", "TextMetrics"]

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
