[package]
name = "piet"
edition = "2018"
version = "0.5.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An abstraction for 2D graphics."
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]
include = ["src/**/*", "Cargo.toml"]

[dependencies]
image = { version = "0.24.0", optional = true, default-features = false }
kurbo = "0.8.2"
unic-bidi = "0.9"

[features]

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and thats al we use `Image` for.
image_png = ["image/png", "image"]
jpeg = ["image/jpeg", "image"]
jpeg_rayon = ["image/jpeg_rayon", "image"]
gif = ["image/gif", "image"]
bmp = ["image/bmp", "image"]
ico = ["image/ico", "image"]
tiff = ["image/tiff", "image"]
webp = ["image/webp", "image"]
pnm = ["image/pnm", "image"]
dds = ["image/dds", "image"]
tga = ["image/tga", "image"]
farbfeld = ["image/farbfeld", "image"]
dxt = ["image/dxt", "image"]
hdr = ["image/hdr", "image"]

serde = ["kurbo/serde"]
