[package]
name = "piet"
version = "0.6.2"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An abstraction for 2D graphics."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2021"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]
include = ["src/**/*", "Cargo.toml", "snapshots/resources/*"]

[dependencies]
image = { version = "0.25.4", optional = true, default-features = false }
kurbo = "0.11.1"
pico-args = { version = "0.5.0", optional = true, features = ["eq-separator"] }
png = { version = "0.17.14", optional = true }
os_info = { version = "3.8.2", optional = true, default-features = false }
unic-bidi = "0.9.0"

[features]
samples = ["pico-args", "png", "os_info"]

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and thats al we use `Image` for.
image_png = ["image/png", "image"]
jpeg = ["image/jpeg", "image"]
gif = ["image/gif", "image"]
bmp = ["image/bmp", "image"]
ico = ["image/ico", "image"]
tiff = ["image/tiff", "image"]
webp = ["image/webp", "image"]
pnm = ["image/pnm", "image"]
dds = ["image/dds", "image"]
tga = ["image/tga", "image"]
hdr = ["image/hdr", "image"]

serde = ["kurbo/serde"]
