[package]
name = "piet"
version.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An abstraction for 2D graphics."
categories = ["rendering::graphics-api"]
keywords = ["graphics", "2d"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "snapshots/resources/*"]

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
image = { version = "0.25.4", optional = true, default-features = false }
kurbo = "0.11.1"
pico-args = { version = "0.5.0", optional = true, features = ["eq-separator"] }
png = { version = "0.17.14", optional = true }
os_info = { version = "3.8.2", optional = true, default-features = false }
unic-bidi = "0.9.0"

[features]
samples = ["pico-args", "png", "os_info"]

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and thats al we use `Image` for.
image_png = ["image/png", "image"]
jpeg = ["image/jpeg", "image"]
gif = ["image/gif", "image"]
bmp = ["image/bmp", "image"]
ico = ["image/ico", "image"]
tiff = ["image/tiff", "image"]
webp = ["image/webp", "image"]
pnm = ["image/pnm", "image"]
dds = ["image/dds", "image"]
tga = ["image/tga", "image"]
hdr = ["image/hdr", "image"]

serde = ["kurbo/serde"]
