[package]
name = "piet-web-example"
version = "0.0.2"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
piet = { path = "../../../piet" }
piet-web = { path = "../.." }
piet-test = { path = "../../../piet-test" }

wasm-bindgen = "0.2.30"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.10"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"]
