[package]
name = "piet-web-example"
version = "0.0.2"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
piet = { path = "../../../piet", features = ["samples"] }
piet-web = { path = "../.." }

wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.72"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"]
