[package]
name = "piet-web-example"
publish = false
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
piet = { path = "../../../piet", features = ["samples"] }
piet-web = { path = "../.." }

wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.72"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"]
